# lambda-polynomials

./: Cargo.toml
src/: coframes.rs  common.rs  copyable_fn.rs  differentiable.rs  main.rs  polynomials.rs  printing.rs  quotients.rs  random.rs  rationals.rs  variables.rs  vectors.rs
src/ops/: mod.rs  monomial_ops.rs  operations.rs  polynomial_ops.rs  quotient_ops.rs  rational_function_ops.rs  variable_ops.rs
