[package]
name = "lambda-polynomials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "*"
array-init = "*"
duplicate = "*"
itertools = "*"
dyn-clone = "1.0.11"
num-traits = "*"
rand={version="*", features = ["std_rng", "alloc"]}
rand_distr = "*"
